target/generated-sources/antlr4/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__44=1, T__43=2, T__42=3, T__41=4, T__40=5, T__39=6, T__38=7, T__37=8, 
		T__36=9, T__35=10, T__34=11, T__33=12, T__32=13, T__31=14, T__30=15, T__29=16, 
		T__28=17, T__27=18, T__26=19, T__25=20, T__24=21, T__23=22, T__22=23, 
		T__21=24, T__20=25, T__19=26, T__18=27, T__17=28, T__16=29, T__15=30, 
		T__14=31, T__13=32, T__12=33, T__11=34, T__10=35, T__9=36, T__8=37, T__7=38, 
		T__6=39, T__5=40, T__4=41, T__3=42, T__2=43, T__1=44, T__0=45, NUM=46, 
		IDENT=47, POUND=48, PARENT=49, THIS=50, RETURN=51, CONTINUE=52, BREAK=53, 
		WS=54;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'을 반복'", "'공용'", "'구현'", "'확장'", "'!='", "'이라면'", 
		"'{'", "'='", "'라면'", "'}'", "'<='", "'거짓'", "'\"'", "'그리고'", "']를'", 
		"'('", "'*'", "','", "'.'", "'<-'", "'아니면'", "'혹은'", "']은'", "'틀'", "'>='", 
		"'['", "'--'", "'++'", "'<'", "'|'", "']을'", "']'", "'>'", "'참'", "'또는'", 
		"'!'", "'%'", "'계속'", "')'", "'꾸러미'", "'가져오기'", "'+'", "'-'", "']는'", 
		"NUM", "IDENT", "'#'", "'부모'", "'자신'", "'!내보내기'", "'!다시 위로'", "'!나가기'", 
		"WS"
	};
	public static final int
		RULE_program = 0, RULE_package_decl = 1, RULE_dot = 2, RULE_import_decl = 3, 
		RULE_interface_decl = 4, RULE_interface_compound = 5, RULE_interface_method = 6, 
		RULE_class_decl = 7, RULE_pound = 8, RULE_extend = 9, RULE_implement = 10, 
		RULE_class_compound = 11, RULE_class_static_field = 12, RULE_class_field = 13, 
		RULE_comma = 14, RULE_class_field_decl = 15, RULE_class_method = 16, RULE_params = 17, 
		RULE_param = 18, RULE_compound = 19, RULE_stmt = 20, RULE_if_stmt = 21, 
		RULE_if_condition = 22, RULE_else_condition = 23, RULE_else_if_condition = 24, 
		RULE_while_stmt = 25, RULE_expression = 26, RULE_num = 27, RULE_ident = 28, 
		RULE_classSymbol = 29, RULE_super_prefix = 30, RULE_this_prefix = 31, 
		RULE_assignment_stmt = 32, RULE_assign_symbol = 33, RULE_return_stmt = 34, 
		RULE_return_symbol = 35, RULE_method_call = 36, RULE_args = 37, RULE_continue_stmt = 38, 
		RULE_break_stmt = 39, RULE_boolean_literal = 40, RULE_op = 41, RULE_prefixUnaryOP = 42, 
		RULE_postfixUnaryOP = 43;
	public static final String[] ruleNames = {
		"program", "package_decl", "dot", "import_decl", "interface_decl", "interface_compound", 
		"interface_method", "class_decl", "pound", "extend", "implement", "class_compound", 
		"class_static_field", "class_field", "comma", "class_field_decl", "class_method", 
		"params", "param", "compound", "stmt", "if_stmt", "if_condition", "else_condition", 
		"else_if_condition", "while_stmt", "expression", "num", "ident", "classSymbol", 
		"super_prefix", "this_prefix", "assignment_stmt", "assign_symbol", "return_stmt", 
		"return_symbol", "method_call", "args", "continue_stmt", "break_stmt", 
		"boolean_literal", "op", "prefixUnaryOP", "postfixUnaryOP"
	};

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Interface_declContext> interface_decl() {
			return getRuleContexts(Interface_declContext.class);
		}
		public Interface_declContext interface_decl(int i) {
			return getRuleContext(Interface_declContext.class,i);
		}
		public List<Import_declContext> import_decl() {
			return getRuleContexts(Import_declContext.class);
		}
		public Import_declContext import_decl(int i) {
			return getRuleContext(Import_declContext.class,i);
		}
		public List<Class_declContext> class_decl() {
			return getRuleContexts(Class_declContext.class);
		}
		public Package_declContext package_decl() {
			return getRuleContext(Package_declContext.class,0);
		}
		public Class_declContext class_decl(int i) {
			return getRuleContext(Class_declContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(88); package_decl();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(91); import_decl();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(99);
				switch (_input.LA(1)) {
				case T__20:
					{
					setState(97); interface_decl();
					}
					break;
				case POUND:
					{
					setState(98); class_decl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(101); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__20 || _la==POUND );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_declContext extends ParserRuleContext {
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public Package_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPackage_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPackage_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitPackage_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_declContext package_decl() throws RecognitionException {
		Package_declContext _localctx = new Package_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103); match(T__4);
			setState(104); ident();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__25) {
				{
				{
				setState(105); dot();
				setState(106); ident();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DotContext extends ParserRuleContext {
		public DotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterDot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitDot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitDot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DotContext dot() throws RecognitionException {
		DotContext _localctx = new DotContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dot);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113); match(T__25);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_declContext extends ParserRuleContext {
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<DotContext> dot() {
			return getRuleContexts(DotContext.class);
		}
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public DotContext dot(int i) {
			return getRuleContext(DotContext.class,i);
		}
		public Import_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterImport_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitImport_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitImport_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_declContext import_decl() throws RecognitionException {
		Import_declContext _localctx = new Import_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(T__3);
			setState(116); ident();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__25) {
				{
				{
				setState(117); dot();
				setState(120);
				switch (_input.LA(1)) {
				case IDENT:
					{
					setState(118); ident();
					}
					break;
				case T__27:
					{
					setState(119); match(T__27);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_declContext extends ParserRuleContext {
		public ExtendContext extend() {
			return getRuleContext(ExtendContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Interface_compoundContext interface_compound() {
			return getRuleContext(Interface_compoundContext.class,0);
		}
		public Interface_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterInterface_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitInterface_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitInterface_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_declContext interface_decl() throws RecognitionException {
		Interface_declContext _localctx = new Interface_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interface_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); match(T__20);
			setState(128); match(T__18);
			setState(129); ident();
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__12) | (1L << T__0))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(132);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(131); extend();
				}
			}

			setState(134); interface_compound();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_compoundContext extends ParserRuleContext {
		public List<Interface_methodContext> interface_method() {
			return getRuleContexts(Interface_methodContext.class);
		}
		public Interface_methodContext interface_method(int i) {
			return getRuleContext(Interface_methodContext.class,i);
		}
		public Interface_compoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_compound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterInterface_compound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitInterface_compound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitInterface_compound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_compoundContext interface_compound() throws RecognitionException {
		Interface_compoundContext _localctx = new Interface_compoundContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interface_compound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(T__37);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(137); interface_method();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(143); match(T__34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_methodContext extends ParserRuleContext {
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Interface_methodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterInterface_method(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitInterface_method(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitInterface_method(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_methodContext interface_method() throws RecognitionException {
		Interface_methodContext _localctx = new Interface_methodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_interface_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145); ident();
			setState(146); match(T__28);
			setState(148);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(147); params();
				}
			}

			setState(150); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declContext extends ParserRuleContext {
		public ExtendContext extend() {
			return getRuleContext(ExtendContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Class_compoundContext class_compound() {
			return getRuleContext(Class_compoundContext.class,0);
		}
		public PoundContext pound() {
			return getRuleContext(PoundContext.class,0);
		}
		public ImplementContext implement() {
			return getRuleContext(ImplementContext.class,0);
		}
		public Class_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterClass_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitClass_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitClass_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_declContext class_decl() throws RecognitionException {
		Class_declContext _localctx = new Class_declContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_class_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); pound();
			setState(153); match(T__18);
			setState(154); ident();
			setState(155);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__12) | (1L << T__0))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(157);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(156); extend();
				}
				break;
			}
			setState(160);
			_la = _input.LA(1);
			if (_la==T__18) {
				{
				setState(159); implement();
				}
			}

			setState(162); class_compound();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PoundContext extends ParserRuleContext {
		public PoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitPound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PoundContext pound() throws RecognitionException {
		PoundContext _localctx = new PoundContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pound);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164); match(POUND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtendContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ExtendContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extend; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterExtend(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitExtend(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitExtend(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtendContext extend() throws RecognitionException {
		ExtendContext _localctx = new ExtendContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_extend);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(T__18);
			setState(167); ident();
			setState(168);
			_la = _input.LA(1);
			if ( !(_la==T__29 || _la==T__13) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(169); match(T__40);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplementContext extends ParserRuleContext {
		public List<CommaContext> comma() {
			return getRuleContexts(CommaContext.class);
		}
		public IdentContext ident(int i) {
			return getRuleContext(IdentContext.class,i);
		}
		public List<IdentContext> ident() {
			return getRuleContexts(IdentContext.class);
		}
		public CommaContext comma(int i) {
			return getRuleContext(CommaContext.class,i);
		}
		public ImplementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterImplement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitImplement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitImplement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplementContext implement() throws RecognitionException {
		ImplementContext _localctx = new ImplementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_implement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171); match(T__18);
			setState(172); ident();
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__26) {
				{
				{
				setState(173); comma();
				setState(174); ident();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(181);
			_la = _input.LA(1);
			if ( !(_la==T__29 || _la==T__13) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(182); match(T__41);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_compoundContext extends ParserRuleContext {
		public List<Class_methodContext> class_method() {
			return getRuleContexts(Class_methodContext.class);
		}
		public Class_static_fieldContext class_static_field(int i) {
			return getRuleContext(Class_static_fieldContext.class,i);
		}
		public Class_methodContext class_method(int i) {
			return getRuleContext(Class_methodContext.class,i);
		}
		public List<Class_fieldContext> class_field() {
			return getRuleContexts(Class_fieldContext.class);
		}
		public Class_fieldContext class_field(int i) {
			return getRuleContext(Class_fieldContext.class,i);
		}
		public List<Class_static_fieldContext> class_static_field() {
			return getRuleContexts(Class_static_fieldContext.class);
		}
		public Class_compoundContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_compound; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterClass_compound(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitClass_compound(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitClass_compound(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_compoundContext class_compound() throws RecognitionException {
		Class_compoundContext _localctx = new Class_compoundContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_class_compound);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184); match(T__37);
			setState(189);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__42 || _la==T__14) {
				{
				setState(187);
				switch (_input.LA(1)) {
				case T__42:
					{
					setState(185); class_static_field();
					}
					break;
				case T__14:
					{
					setState(186); class_field();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(192); class_method();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(198); match(T__34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_static_fieldContext extends ParserRuleContext {
		public Class_fieldContext class_field() {
			return getRuleContext(Class_fieldContext.class,0);
		}
		public Class_static_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_static_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterClass_static_field(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitClass_static_field(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HelloVisitor ) return ((HelloVisitor<? extends T>)visitor).visitClass_static_field(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_static_fieldContext class_static_field() throws RecognitionException {
		Class_static_fieldContext _localctx = new Class_static_fieldContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_class_static_field);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200); match(T__42);
			setState(201); class_field();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
